crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_ordered_numeric_compares_in_decimal_space.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status>=400\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("status" AS DECIMAL(38,6)) >= TRY_CAST(? AS DECIMAL(38,6))
---
params:
  0: '400'
