crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_ordered_numeric_try_casts_double.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status>=400\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("status" AS DOUBLE) >= ?
---
params:
  0: 400
