crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_where_in_list_expands_numeric_elements.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"* | where status in (200, \\\"accepted\\\")\",\n&[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (("status" = ? OR COALESCE(TRY_CAST("status" AS DECIMAL(38,6)) = TRY_CAST(? AS DECIMAL(38,6)), FALSE)) OR "status" = ?)
---
params:
  0: '200'
  1: '200'
  2: 'accepted'
