crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_where_like_timestamp_pin_renders_rfc3339_text.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"* | where ts like \\\"2026-01-%\\\"\",\n&[(\"ts\", CT::Timestamp)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (strftime("ts", '%Y-%m-%dT%H:%M:%S.%fZ') LIKE ?)
---
params:
  0: '2026-01-%'
