crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_where_matches_typed_pin_targets_canonical_text.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"* | where dur matches \\\"^4\\\"\", &[(\"dur\", CT::BigInt)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE regexp_matches(CAST("dur" AS VARCHAR), ?)
---
params:
  0: '^4'
