crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_where_reversed_operands_bind_the_field_rule.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"* | where 400 < status\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (TRY_CAST("status" AS DECIMAL(38,6)) > TRY_CAST(? AS DECIMAL(38,6)))
---
params:
  0: '400'
