crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_where_varchar_ne_keeps_strict_null_policy.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"* | where status != 200\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("status" != ? AND COALESCE(TRY_CAST("status" AS DECIMAL(38,6)) != TRY_CAST(? AS DECIMAL(38,6)), TRUE))
---
params:
  0: '200'
  1: '200'
