crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_dedup_bare.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | dedup\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT DISTINCT *
FROM "_s0"
